IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
7/30/14: IMOD_4-7-7
7/30/14: SWITCHED WRITING OF BYTE FILES BACK TO UNSIGNED (In 4.7).

7/24/14: Fixed transferfid for bidirectional series and other cases with
a separate view group option in tracka.com (In 4.7).

7/21/14: In eTomo - Fine Alignment, changed the title of the MaximumCycles
parameter to "Iteration limit" (In 4.7).(Bug# 1807)

7/21/14: In eTomo fixed a bug that made ineditable table fields editable.
This bug can lead to problems with dataset stablility if these fields are
modified (In 4.7).(Bug# 1812)

7/15/14: Tiltalign issues warning instead of error if WeightWholeTracks is
entered for non-patch track model (In 4.7).

7/11/14: Fixed inability to use patch tracking if cumulative correlation was
checked in coarse alignment (In 4.7).

7/6/14: Made Batchruntomo convert a directive for chopping up patch tracking
contours into option to Imodchopconts instead of Tiltxcorr; fixed problem with 
Imodchopconts testing for whether incompatible options were entered (In 4.7).

7/2/14: Fixed problem with fiducial number that Batchruntomo uses to decide if
stretching can be solved (in 4.7).

7/1/14: Changed Newstack antialiased reduction to give same image size and
centering as binning (In 4.7).
 
6/27/14: Added option to Alterheader to set space group and made Tilt set it
to 1 for tomogram output, following new MRC conventions (In 4.7).

6/22/14: IMOD_4-7-6
6/22/14: Allow robust alignment in Batchruntomo with patch tracking and
contours cut into pieces (In 4.7).

6/18/14: In eTomo - Tomogram Combination, fixed problems with validation and
handling missing tomograms (In 4.7).(Bug# 1803)

6/17/14: In eTomo using the piece list file (when available) to open montaged
raw stacks in Reconstruction and Serial Sections (In 4.7).(Bug# 1801)

6/5/14: Fixed Tomopitch so its output is parsable by eTomo for shift or
thickness more than 1000 (In 4.7).
