@@ -1,5 +1,7 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+8/45/14: Allowed File-Extract in 3dmod to be run on non-MRC files (In 4.7).
+
 7/30/14: IMOD_4-7-7
 7/30/14: SWITCHED WRITING OF BYTE FILES BACK TO UNSIGNED (In 4.7).
 
